// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownMenu matches snapshots 1`] = `
<DocumentFragment>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    class="sc-bczRLJ jfZUxx"
    data-rac=""
    id="react-aria-1"
    type="button"
  >
    Test Menu
  </button>
</DocumentFragment>
`;

exports[`DropdownMenu matches snapshots 2`] = `
<DocumentFragment>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    class="sc-bczRLJ itqnA"
    data-rac=""
    id="react-aria-3"
    type="button"
  >
    Test Menu
  </button>
</DocumentFragment>
`;
